# onlyfangs.gay

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  diesel.toml  docker-compose.yaml  rustfmt.toml
.github/workflows/: release.yaml
deploy/: values.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
migrations/2024-12-11-122152_health/: down.sql  up.sql
migrations/2025-01-05-062850_initial/: down.sql  up.sql
src/: config.rs  global.rs  main.rs  migrations.rs
src/app/: application.rs  applications.rs  auth.rs  error.rs  login.rs  mod.rs
src/database/: enums.rs  mod.rs  schema.rs  types.rs
website/: .env  .prettierignore  eslint.config.mjs  package.json  pnpm-lock.yaml  svelte.config.js
website/src/components/: ApplicationForm.svelte
website/src/routes/: +layout.svelte  +page.svelte  +page.ts  types.ts
website/src/routes/about/: +page.svelte
website/src/routes/applications/: +layout.svelte  +page.svelte
website/src/routes/applications/[id]/: +page.svelte
website/src/styles/: global.css
